Update package.json and html templates

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,18 +1,18 @@
 <!doctype html>
-{{!-- // TODO: UPDATE_FOR_CHARTS --}}
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   {{{titleMeta}}}
-  <meta name="description" content="TODO: UPDATE_FOR_CHARTS YO">
-  <meta property="og:site_name" content="Victory" />
+  {{!-- TODO: https://github.com/FormidableLabs/formidable-charts-docs/issues/10 --}}
+  {{!-- <meta name="description" content=""> --}}
+  {{!-- <meta property="og:description" content="" /> --}}
+  {{!-- <meta property="og:image" content="./static/og-image.png" /> --}}
+  <meta property="og:site_name" content="FormidableCharts" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://www.formidable.com/open-source/victory/" />
-  <meta property="og:image" content="./static/og-image.png" />
-  <meta property="og:description" content="A collection of composable React components for building interactive data visualizations." />
+  <meta property="og:url" content="http://www.formidable.com/open-source/formidable-charts/" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
+  {{!-- <link rel="icon" href="./static/favicon.ico" type="image/x-icon"> --}}
   <base href="{{baseHref}}" />
   {{!-- Fonts --}}
   <link href="https://formidable.com/open-source/fonts.css" rel="stylesheet" type="text/css">
