--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   {{{titleMeta}}}
   {{!-- TODO: https://github.com/FormidableLabs/formidable-charts-docs/issues/10 --}}
-  {{!-- <meta name="description" content=""> --}}
-  {{!-- <meta property="og:description" content="" /> --}}
+  {{!-- <meta name="description" content="Quick, composed React charts out of the box."> --}}
+  {{!-- <meta property="og:description" content="Quick, composed React charts out of the box." /> --}}
   {{!-- <meta property="og:image" content="./static/og-image.png" /> --}}
   <meta property="og:site_name" content="FormidableCharts" />
   <meta property="og:type" content="website" />
