Add docs routes specific to formidable-charts (#15)
* Add docs routes and fix sidebar links

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -6,12 +6,14 @@
   {{{titleMeta}}}
   <meta name="description" content="Quick, composed React charts out of the box.">
   <meta property="og:description" content="Quick, composed React charts out of the box." />
-  <meta property="og:image" content="./static/og-image.png" /> --}}
   <meta property="og:site_name" content="FormidableCharts" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.formidable.com/open-source/formidable-charts/" />
+  {{!-- Formidable OG:image --}}
+  <meta property="og:image" content="https://formidable.com/wp-content/themes/formidable/assets/images/no-img.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {{!-- <link rel="icon" href="./static/favicon.ico" type="image/x-icon"> --}}
+  {{!-- Formidable favicon --}}
+  <link rel="shortcut icon" href="https://formidable.com/wp-content/themes/formidable/assets/images/fav.png" type="image/ico">
   <base href="{{baseHref}}" />
   {{!-- Fonts --}}
   <link href="https://formidable.com/open-source/fonts.css" rel="stylesheet" type="text/css">
