--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   {{{titleMeta}}}
   <meta name="description" content="Quick, composed React charts out of the box.">
+  {{!-- FormidableCharts OG --}}
   <meta property="og:description" content="Quick, composed React charts out of the box." />
   <meta property="og:site_name" content="FormidableCharts" />
   <meta property="og:type" content="website" />
